--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">Welcome!</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        MenuUUU
+        Menu
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -54,7 +54,7 @@
       <img class="masthead-avatar mb-5" src="img/avataaars.svg" alt="">
 
       <!-- Masthead Heading -->
-      <h1 class="masthead-heading text-uppercase mb-0">Start Bootstrap</h1>
+      <h1 class="masthead-heading text-uppercase mb-0">Mitchell Escarrega</h1>
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
@@ -274,8 +274,8 @@
         <!-- Footer Location -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Location</h4>
-          <p class="lead mb-0">2215 John Daniel Drive
-            <br>Clark, MO 65243</p>
+          <p class="lead mb-0">51495 Calle Jacumba
+            <br>La Quinta, CA 92253</p>
         </div>
 
         <!-- Footer Social Icons -->
